# openai-cli

./: .gitignore  Cargo.toml  README.md
src/: chat.rs  edit.rs  main.rs  models.rs
