[package]
name = "openai-cli"
version = "0.1.2"
edition = "2021"
authors = ["LevitatingBusinessMan"]
description = "CLI for the OpenAI API"
repository = "https://github.com/LevitatingBusinessMan/gpt-cli"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.8", features = ["derive", "env"] }
dirs = "5.0.0"
openai-rust = "0.1.4"
reedline = "0.17.0"
serde_json = "1.0.94"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.26.0" }
