[package]
name = "openai-cli"
version = "0.3.6"
edition = "2021"
authors = ["LevitatingBusinessMan"]
description = "CLI for the OpenAI API"
homepage = "https://github.com/LevitatingBusinessMan/openai-cli"
repository = "https://github.com/LevitatingBusinessMan/openai-cli"
readme = "README.md"
license = "MIT"
keywords = ["openai", "gpt", "api", "cli", "terminal"]
categories = ["command-line-interface", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.8", features = ["derive", "env"] }
colored = "2.0.0"
dirs = "5.0.0"
inquire = "0.6.2"
openai-rust = "0.5"
reedline = "0.22.0"
serde_json = "1.0.94"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.26.0" }
